5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1644_2446.log
== TEST (2019-04-16 15:52:27) 
-- CODE:
a = int(input())
print(a)
-- OUTPUT:
87612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:52:30) 
-- CODE:
a = int(input())
print(a)
-- EXECUTION TIME:
0.140969
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
87612
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
760834
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
122967
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:52:35) 
-- CODE:
a = int(input())
print(a)
-- OUTPUT:
87612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:52:42) 
-- CODE:
a = int(input())
print(addsadas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(addsadas)
NameError: name 'addsadas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:52:59) 
-- CODE:
a = 5*48846864848448644884468488468484	
print(a)
-- EXECUTION TIME:
0.264331
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
244234324242243224422342442342420
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
244234324242243224422342442342420
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
244234324242243224422342442342420
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:52:59) 
-- CODE:
a = 5*48846864848448644884468488468484	
print(a)
-- OUTPUT:
244234324242243224422342442342420
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 17:13:34) 
-- CODE:
x=int (input("numero de 6 digitos: "))

s1=x//100000
s2=(x//10000)%10
s3=(x//1000)%10
s4=(x//100)%10
s5=(x//10)%10
s6=x%10

w=(s2+s4+s6)%(s1+s3+s5)

if w==0:
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.79493
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
